force-app/main/default/objects/FieloPLT__Program__c/FieloPLT__Program__c.object-meta.xml
<CustomObject>
    <description>Programs establish the general operation settings for your loyalty program.</description>
    <label>Program</label>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>