force-app/main/default/objects/FieloPLT__Program__c/fields/FieloPLT__ActualPointCost__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ActualPointCost__c</fullName>
    <description>It translates Transaction Points into real currency cost.</description>
    <inlineHelpText>It translates Transaction Points into real currency cost.</inlineHelpText>
    <label>Actual Point Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>