force-app/main/default/objects/FieloPLT__Program__c/fields/FieloPLT__CriteriaFields__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__CriteriaFields__c</fullName>
    <description>Internal field. It stores all &quot;Field Name&quot; fields used in the Criterion of Rules.</description>
    <inlineHelpText>Internal field. It stores all &quot;Field Name&quot; fields used in the Criterion of Rules.</inlineHelpText>
    <label>Criteria Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>