force-app/main/default/objects/FieloPLT__Program__c/fields/FieloPLT__NumberOfVoucherDigits__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__NumberOfVoucherDigits__c</fullName>
    <description>Number of digits displayed on the voucher. Vouchers must include at least 4 digits.</description>
    <inlineHelpText>Set the number of digits displayed on the Voucher (min. 4 digits).</inlineHelpText>
    <label>Number of Voucher Digits</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>