force-app/main/default/objects/FieloPLT__Program__c/fields/FieloPLT__OnlineTransactionProcessing__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__OnlineTransactionProcessing__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When on, Transactions and Trackers are processed online when recorded. Otherwise, all transactions and trackers are processed offline.</description>
    <inlineHelpText>If on, Transactions will be processed online when recorded. Otherwise, they will be processed offline once a day.</inlineHelpText>
    <label>Online Processing</label>
    <type>Checkbox</type>
</CustomField>