force-app/main/default/objects/FieloPLT__Program__c/fields/FieloPLT__RequestMemberAuthorization__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RequestMemberAuthorization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When on, new Members need to be approved before being included in the Program and an Authorization Workflow needs to be established.</description>
    <inlineHelpText>When on, new Members need to be approved through a Workflow process before being included in the Program.</inlineHelpText>
    <label>Request Member Authorization</label>
    <type>Checkbox</type>
</CustomField>