force-app/main/default/objects/FieloPLT__Program__c/fields/FieloPLT__RequestRedemptionAuthorization__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RequestRedemptionAuthorization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When on, Redemptions need to be approved before they are finalized.</description>
    <inlineHelpText>When on, Redemptions need to be approved before they are finalized.</inlineHelpText>
    <label>Request Redemption Authorization</label>
    <type>Checkbox</type>
</CustomField>