force-app/main/default/objects/FieloPLT__Program__c/fields/FieloPLT__RequestUser__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RequestUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When on, a new Member will only be assigned a User if approved through a Workflow process. This option cannot be applied to Programs that use a Communities-based loyalty portal.</description>
    <inlineHelpText>When on, a new Member will only be assigned a User if approved through a Workflow process. This option cannot be applied to Programs that use a Communities-based loyalty portal.</inlineHelpText>
    <label>Request User</label>
    <type>Checkbox</type>
</CustomField>