force-app/main/default/objects/FieloPLT__Program__c/fields/FieloPLT__RewardInjectQuery__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RewardInjectQuery__c</fullName>
    <description>Field that filters Rewards by means of conditions.</description>
    <inlineHelpText>Field that filters Rewards by means of conditions.</inlineHelpText>
    <label>Reward Inject Query</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>