force-app/main/default/objects/FieloPLT__Program__c/fields/FieloPLT__SegmentInjectQuery__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__SegmentInjectQuery__c</fullName>
    <description>Field that filters Segments by means of conditions.</description>
    <inlineHelpText>Field that filters Segments by means of conditions.</inlineHelpText>
    <label>Segment Inject Query</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>