force-app/main/default/objects/FieloPLT__Program__c/fields/FieloPLT__UserCreationClass__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__UserCreationClass__c</fullName>
    <description>Class for User creation reflection.</description>
    <inlineHelpText>Enter the class for User creation reflection.</inlineHelpText>
    <label>User Creation Class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>