force-app/main/default/objects/FieloPLT__Program__c/fields/V_DipararDinamize__c.field-meta.xml
<CustomField>
    <fullName>V_DipararDinamize__c</fullName>
    <description>Campo utilizado como gatilho pelo Dinamize.</description>
    <inlineHelpText>Campo preenchido logo após a carga de dados de Resultados e Metas e limpo após 6 dias corridos</inlineHelpText>
    <label>Diparar Dinamize</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>