force-app/main/default/objects/FieloPLT__Program__c/fields/V_RegulamentoElite__c.field-meta.xml
<CustomField>
    <fullName>V_RegulamentoElite__c</fullName>
    <description>Utilizado para a inclusão do regulamento da iniciativa Elite.</description>
    <inlineHelpText>Utilizado para a inclusão do regulamento da iniciativa Elite.</inlineHelpText>
    <label>Regulamento Elite</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>