force-app/main/default/objects/FieloPLT__Program__c/fields/V_RegulamentoSPY__c.field-meta.xml
<CustomField>
    <fullName>V_RegulamentoSPY__c</fullName>
    <description>Utilizado para a inclusão do regulamento da iniciativa SPY.</description>
    <inlineHelpText>Utilizado para a inclusão do regulamento da iniciativa SPY.</inlineHelpText>
    <label>Regulamento SPY</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>