force-app/main/default/objects/FieloPLT__Program__c/validationRules/FieloPLT__ValidateNumerOfVoucherDigits.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloPLT__ValidateNumerOfVoucherDigits</fullName>
    <active>true</active>
    <description>Voucher must include at least 4 digits.</description>
    <errorConditionFormula>FieloPLT__NumberOfVoucherDigits__c &lt; 4</errorConditionFormula>
    <errorDisplayField>FieloPLT__NumberOfVoucherDigits__c</errorDisplayField>
    <errorMessage>Voucher must include at least 4 digits.</errorMessage>
</ValidationRule>